[gd_scene load_steps=4 format=3 uid="uid://dob8fmkdxmw2p"]

[ext_resource type="Script" path="res://src/scripts/main_menu.gd" id="1_on6id"]
[ext_resource type="Texture2D" uid="uid://bi7mgudeo1dj1" path="res://assets/art/shared/menus/main_menu.png" id="2_a5f7t"]
[ext_resource type="FontFile" uid="uid://bfnot86sditsf" path="res://assets/theme/fonts/dpcomic.ttf" id="3_k1hn7"]

[node name="MainMenu" type="Node2D"]
scale = Vector2(4, 4)
script = ExtResource("1_on6id")

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 288.0
offset_bottom = 162.0

[node name="TextureRect" type="TextureRect" parent="Ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -81.0
offset_right = 144.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a5f7t")

[node name="RichTextLabel" type="RichTextLabel" parent="Ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -55.0
offset_right = 106.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_k1hn7")
theme_override_font_sizes/normal_font_size = 30
text = "Sticky Restoration"

[node name="PlayButton" type="Button" parent="Ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -13.0
offset_right = 49.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_k1hn7")
text = "Play"

[node name="SettingsButton" type="Button" parent="Ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -13.0
offset_right = 126.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_k1hn7")
text = "Settings"

[node name="JournalButton" type="Button" parent="Ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -13.0
offset_right = -64.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_k1hn7")
text = "Journal"

[node name="QuitButton" type="Button" parent="Ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 31.0
offset_right = 49.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_k1hn7")
text = "Quit
"

[connection signal="pressed" from="Ui/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Ui/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Ui/JournalButton" to="." method="_on_journal_button_pressed"]
[connection signal="pressed" from="Ui/QuitButton" to="." method="_on_quit_button_pressed"]
